--- a/templates/register.html
+++ b/templates/register.html
@@ -14,7 +14,7 @@ Email
 <br>
 Username
 <br>
-<input name="username" placeholder="Email" type="text">
+<input name="username" placeholder="Username" type="text">
 <br>
 <br>
 Password
