--- a/templates/layout.html
+++ b/templates/layout.html
@@ -16,10 +16,12 @@
           }
     </script>
 
+    <div class="site_name">
+        CLEO
+    </div>
     <link href="{{ url_for('static', filename='main.css') }}" rel="stylesheet">
 
-    <div
-     align="center">
+    <div align="center">
      <a href="{{ url_for('feed') }}"> Back Home</a>.
 
         <a  href="{{ url_for('post') }}"> New Post</a>
